Fix settings button glitching with focus visible

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -191,6 +191,7 @@ button.icon {
 
   & > * {
     grid-area: 1 / 1;
+    margin: auto;
   }
 
   &:focus-visible {
